fix broken resource and reference text/image overflow

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -78,7 +78,7 @@
 ******************************************************************************/
 
 /* Widths & Heights */
-@jh-min-width: 980px;
+@jh-min-width: 600px;
 @jh-max-width: 1180px;
 
 /* Base em value for margins/padding (16px base) */
@@ -144,7 +144,6 @@ body {
 	padding: 0;
 	z-index: 0;
 	.jh-border-box;
-	overflow: hidden;
 }
 
 	.@{jh-namespace} a {
@@ -1073,7 +1072,7 @@ a:hover {
 		}
 		
 		div.resource {
-			padding: 0px 90px 30px 90px;
+			padding: 0px 45px 30px 45px;
 		}
 		.resource a {
 			color: #00aed1;
@@ -1109,7 +1108,7 @@ a:hover {
 			background-repeat: no-repeat;
 			background-position: center center;
 			display: block;
-			max-width: 950px;
+			max-width: 100%;
 			border: 1px solid #E0E0E0;
 			padding: 0.3125em;
 			margin: 2.5em auto;
